--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://occb.dev/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Olli On Tour"
+theme = "occb"
