--- a/themes/occb/theme.toml
+++ b/themes/occb/theme.toml
@@ -1,17 +1,17 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "Occb"
+name = "occb"
 license = "MIT"
 licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
 description = ""
-homepage = "http://example.com/"
+homepage = "https://occb.dev/"
 tags = []
 features = []
 min_version = "0.41"
 
 [author]
-  name = ""
+  name = "Oliver Becker"
   homepage = ""
 
 # If porting an existing theme
